Fix spacing, reduce padding in input field, modify h3 inner text, add ng-class for selected thumbnail, add comments in scss

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,7 +10,9 @@ body {
 
 * {
   padding-top: 0.1px;
-  /* collapsing margins fix */ }
+  /* collapsing margins fix */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
 
 .wrapper {
   max-width: 840px;
@@ -58,7 +60,9 @@ body {
       background-clip: content-box;
       background-position: left top; }
 
+/**Previewe Wrapper **/
 .preview-wrapper {
+  margin: 5px 10px;
   position: relative;
   width: 640px;
   height: 920px;
@@ -78,6 +82,7 @@ body {
         -ms-transform: translateX(-50%) translateY(-50%);
             transform: translateX(-50%) translateY(-50%); }
 
+/** Form Wrapper **/
 .form-wrapper {
   background-color: #f5f5f5;
   padding: 20px 35px;
@@ -85,7 +90,7 @@ body {
   .form-wrapper h3 {
     color: #969696;
     font-family: "Raleway", tahoma, sans-serif;
-    font-size: 36px;
+    font-size: 28px;
     margin-top: 5px;
     margin-bottom: 5px; }
   .form-wrapper input {
@@ -94,7 +99,7 @@ body {
 
 input[type="text"] {
   width: 50vw;
-  padding: 15px 20px;
+  padding: 10px 15px;
   border: solid 3px #c9c9c9;
   -webkit-transition: border 0.3s;
   transition: border 0.3s;
@@ -107,7 +112,7 @@ input[type="text"].focus {
   border: solid 3px #969696; }
 
 input[type="submit"] {
-  padding: 15px 20px;
+  padding: 10px 15px;
   background: #196db6;
   color: white;
   border: 3px solid #1660a0;
@@ -117,13 +122,23 @@ input[type="submit"] {
     background: #1c7acc;
     border-color: #196db6; }
 
+/** Gallery Wrapper **/
 .gallery-wrapper input[type="radio"] {
   display: none; }
-  .gallery-wrapper input[type="radio"] + label {
-    display: block; }
-  .gallery-wrapper input[type="radio"]:checked + label {
-    border: 5px solid red; }
+  .gallery-wrapper input[type="radio"] + label img {
+    width: 20%;
+    float: left;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    height: 100px;
+    width: auto;
+    margin: 5px 10px; }
 
+.selected {
+  -webkit-box-shadow: 0px 2px 5px #333;
+          box-shadow: 0px 2px 5px #333; }
+
+/** Cards **/
 .whisper {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
